--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <link href="./assets/stylesheets/slick.css" rel="stylesheet" type="text/css" />
     <link href="./assets/stylesheets//bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/stylesheets/main.css?1.5" rel="stylesheet" type="text/css" />
+    <link href="./assets/stylesheets/main.css?1.4" rel="stylesheet" type="text/css" />
 
 
     <link rel="icon" href="./assets/images/cropped-favicon-150x150.png?v5" sizes="32x32" />
@@ -111,10 +111,8 @@
 
                 <div class="titulo-secao">
                     <h2>Bem vindo ao <span>programa de afiliados</span> da Pernambuco Motos</h2>
-                    <p>Estamos animados em te apresentar a oportunidade de se juntar a nós nessa missão de realizar
-                        sonhos através do Consórcio Nacional Honda, um produto que oferece inúmeros benefícios aos
-                        nossos clientes. Com sua ajuda, podemos alcançar mais pessoas e oferecer condições exclusivas e
-                        acessíveis para a aquisição de motos Honda.</p>
+                    <p>Estamos animados em lhe apresentar a oportunidade de se juntar à Pernambuco Motos nessa missão de realizar sonhos através do Consórcio Nacional Honda, um produto que oferece inúmeros benefícios aos nossos clientes. Com sua ajuda, poderemos alcançar mais pessoas e oferecer condições exclusivas e acessíveis para a aquisição de motos Honda.
+                    </p>
                     <h3 class="mt-5">Quais são as nossas vantagens?</h3>
                 </div><!-- /titulo-secao -->
 
@@ -125,14 +123,13 @@
                         <div class="col-md-4 text-center mt-5 mb-xxl-5">
                             <div class="icon">
                                 <img width="137" height="137" src="./assets/images/icons/money.webp"
-                                    alt="Icon: Comissões atraentes" />
+                                    alt="Icon: Premiações atraentes" />
                             </div>
                             <div class="h3">
-                                <strong>1. Comissões atraentes</strong>
+                                <strong>1. Premiações atraentes</strong>
                             </div>
                             <p>
-                                Ganhe uma comissão sobre cada venda realizada através de suas indicações, permitindo
-                                uma renda extra consistente.
+                                Ganhe uma premiação sobre cada venda realizada através de suas indicações, permitindo o recebimento de valores expressivos de forma a complementar sua renda;
                             </p>
                         </div>
 
@@ -146,8 +143,7 @@
                                 <strong>2. Marca reconhecida</strong>
                             </div>
                             <p>
-                                Associe-se a uma das marcas mais confiáveis do mercado, a Honda, que já possui
-                                credibilidade e alta demanda, facilitando suas vendas.
+                            Associe-se a uma das marcas mais confiáveis do mercado, a Honda, que já possui credibilidade e alta demanda, facilitando a sua captação e direcionamento de vendas à empresa;
                             </p>
                         </div>
 
@@ -160,11 +156,9 @@
                                 <strong>3. Flexibilidade de horários</strong>
                             </div>
                             <p>
-                                Trabalhe no seu próprio ritmo, promovendo os consórcios onde e quando quiser, sem a
-                                necessidade de horários fixos.
+                                Faça a atividade no seu próprio ritmo, promovendo os consórcios onde, como e quando quiser, sem a necessidade de horários fixos, subordinação a chefes e demais compromissos;
                             </p>
                         </div>
-
 
                         <div class="col-md-4 text-center mt-5 mb-xxl-5">
                             <div class="icon">
@@ -175,10 +169,9 @@
                                 <strong>4. Sem limites de ganhos</strong>
                             </div>
                             <p>
-                                O potencial de ganhos é ilimitado, quanto mais você vender, mais você ganha.
+                                O potencial de ganhos é ilimitado, quanto mais você indicar, mais você incrementará o recebimento da premiação;
                             </p>
                         </div>
-
 
                         <div class="col-md-4 text-center mt-5 mb-xxl-5">
                             <div class="icon">
@@ -189,8 +182,7 @@
                                 <strong>5. Prêmios por desempenho</strong>
                             </div>
                             <p>
-                                Você pode ganhar prêmios por indicar mais pessoas para se afiliar e por atingir metas de
-                                vendas.
+                                Você pode ganhar prêmios adicionais por indicar mais pessoas para se afiliar e atingir metas de vendas.
                             </p>
                         </div>
 
@@ -332,10 +324,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="h3"><strong><em>Lucre sem sair de casa!</em></strong></div>
-                            <p>Com o Programa de Afiliados da PE Motos, através do seu link exclusivo você irá divulgar
-                                e
-                                vender o Consórcio Nacional Honda e ganhar uma comissão de 1% sobre o valor do crédito
-                                comercializado.</p>
+                            <p>Com o Programa de Afiliados da PE Motos, através do seu link exclusivo você irá divulgar e potencializar a venda de Consórcio Nacional Honda, recebendo premiação de 1% sobre o valor do crédito comercializado. </p>
                         </div>
                         <div class="col-lg-3">
                             <div class="action">
@@ -431,11 +420,7 @@
                                     <div id="collapseOne" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <p>O Programa de Afiliados da Pernambuco Motos é uma forma de gerar renda
-                                                extra
-                                                fomentando vendas do Consórcio Nacional Honda através do seu link
-                                                exclusivo
-                                                para afiliados.</p>
+                                            <p>O Programa de Afiliados da Pernambuco Motos é uma forma de gerar renda extra fomentando vendas do Consórcio Nacional Honda através do seu link exclusivo para afiliados.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -450,11 +435,7 @@
                                     <div id="collapseTwo" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <p>Qualquer pessoa que queira incrementar sua renda, promovendo um produto
-                                                de
-                                                qualidade, mediante a aceitação das condições para a realização da
-                                                parceria,
-                                                sujeito à aprovação da empresa.</p>
+                                            <p>Qualquer pessoa que queira incrementar sua renda, promovendo um produto de qualidade, mediante a aceitação das condições para a realização da parceria, sujeito à aprovação da empresa.</p>
                                         </div>
                                     </div>
                                 </div>
